fix(security): 修复密钥脱敏和加密解密逻辑中的条件判断错误
- 修正了mask方法中对空值的判断逻辑，将isNotBlank改为isBlank以正确处理空输入
- 更新了解密方法中对空值的判断，统一使用StringUtils.isBlank替代原生判断
- 在加密方法中修正了空值判断逻辑，确保正确处理空白输入
- 为关键操作添加了必要的空行以提高代码可读性
- 确保所有异常情况下的返回值符合预期行为